@startuml

left to right direction

' Config ERD diagram
hide circle
skinparam linetype ortho

entity packages {
    *id: bigint <<generated>>
    ---
    purl: varchar
}

entity scans {
    *id: bigint <<generated>>
    uuid: uuid
    ---
    package_id: bigint <<fk>>
    created: timestamp
    location: clob
    license: clob
    error: clob
    contested: boolean
    confirmed: boolean
}
packages ||--o{ scans

entity detections {
    *id: bigint
    ---
    scan_id: bigint <<fk>>
    license: clob
    score: smallint
    file_path: clob
    start_line: integer
    end_line: integer
    confirmations: integer
}
scans ||--o{ detections

@enduml
